optional: use orElseThrow (reason: modernizer)